update: refactor USSD and auth controllers to be external packages
